welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit : Int = 0 ;

while(nbBiscuit < 4 ){
	avance();
	while(estSurBIscuit==true){
		nbBiscuit = nbBiscuit + 1 ;
	}
}
